# iot_backend

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/static/: index.html
app/static/assets/: index-BG-dwSex.css  index-BGk5Mnhr.js  index-BK51KAzM.js  index-CPCGNMB-.js  index-CyMLwcD4.js  index-D51LPVkP.css  index-DSgxuVX5.css
frontend/: index.html
